--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,13 @@ environment:
 dependencies:
   barcode_widget: ^2.0.4
   cupertino_icons: ^1.0.8
+  firebase_auth: ^6.1.4
+  firebase_core: ^4.4.0
   flutter:
     sdk: flutter
   mobile_scanner: ^7.1.4
   permission_handler: ^12.0.1
+  provider: ^6.1.5+1
   shared_preferences: ^2.5.4
   url_launcher: ^6.3.2
 
