--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   barcode_widget: ^2.0.4
   cupertino_icons: ^1.0.8
+  dio: ^5.9.1
   firebase_auth: ^6.1.4
   firebase_core: ^4.4.0
   flutter:
