--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,13 @@ dependencies:
   firebase_core: ^4.4.0
   flutter:
     sdk: flutter
+  image_picker: ^1.2.1
   mobile_scanner: ^7.1.4
+  path_provider: ^2.1.5
   permission_handler: ^12.0.1
+  photo_view: ^0.15.0
   provider: ^6.1.5+1
+  screenshot: ^3.0.0
   shared_preferences: ^2.5.4
   url_launcher: ^6.3.2
 
