--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,14 @@ dev_dependencies:
   flutter_lints: ^6.0.0
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.14.4
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/balance.png"
+  adaptive_icon_foreground: "assets/images/balance.png"
+  min_sdk_android: 21
 
 flutter:
   uses-material-design: true
