--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ app.*.map.json
 
 android/upload-keystore.jks
 android/key.properties
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
