--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 
 dependencies:
   barcode_widget: ^2.0.4
+  cloud_firestore: ^6.1.2
   cupertino_icons: ^1.0.8
   dio: ^5.9.1
   file_picker: ^10.3.10
