--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   dio: ^5.9.1
   file_picker: ^10.3.10
+  firebase_analytics: ^12.1.2
   firebase_auth: ^6.1.4
   firebase_core: ^4.4.0
   flutter:
@@ -21,6 +22,7 @@ dependencies:
   google_mobile_ads: ^7.0.0
   image_picker: ^1.2.1
   mobile_scanner: ^7.1.4
+  package_info_plus: ^9.0.0
   path_provider: ^2.1.5
   permission_handler: ^12.0.1
   photo_view: ^0.15.0
